Docker file added

--- a/ml-api/templates/index.html
+++ b/ml-api/templates/index.html
@@ -188,7 +188,7 @@
                             technologies.
                         </p>
 
-                        <!-- ✅ Corrected class name -->
+                        <!-- Socail links connect -->
                         <div class="social-links">
                             <a href="https://github.com/kaif0008" target="_blank" class="social-link">
                                 <i class="fab fa-github"></i>
